Create new home page

--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,73 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disrupsi Teknologi</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="/public/css/main.css?v=0.0.1">
   </head>
   <body>
-    <h1>Disrupsi Teknologi</h1>
+    <div class="row">
+      <div class="col s12 m6 offset-m3 l4 offset-l4" id="Container">
+        <div class="row">
+          <div class="col s12">
+            <h1 class="center-align">
+              <img src="/public/images/disrupsiteknologi-vertical.svg" width="75%" height="auto" alt="disrupsiteknologi" />
+            </h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <div class="my-text">
+              <h6 class="flow-text">Kami yakin bahwa setiap pekerjaan akan menjadi lebih mudah dengan bantuan teknologi</h6 class="flow-text">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="my-image col s12">
+            <div class="my-image-text">
+              <h6 class="flow-text">Semua menjadi lebih mudah hanya dengan sentuhan</h6 class="flow-text">
+            </div>
+            <img class="my-image-img" src="/public/images/img1.png" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <div class="my-text">
+              <h6 class="flow-text">Hanya dengan sentuhan semua dapat dikendalikan untuk meningkatkan produktivitas yang lebih baik</h6 class="flow-text">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="my-image col s12">
+            <div class="my-image-text">
+              <h6 class="flow-text">Namun masih banyak pekerjaan diluar sana yang belum dapat dikerjakan hanya dengan sentuhan</h6 class="flow-text">
+            </div>
+            <img class="my-image-img" src="/public/images/img2.png" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <div class="my-text">
+              <h6 class="flow-text">Kami hadir untuk mentransformasi ide yang anda miliki menjadi sebuah teknologi yang akan mempermudah pekerjaan hanya dengan sentuhan</h6 class="flow-text">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="my-image col s12 center-align">
+            <div class="my-image-text">
+              <h6 class="flow-text">Segera wujudkan dan kembangkan ide yang anda miliki bersama kami</h6 class="flow-text">
+              <a class="btn-small red lighten-3">Kirim ide ke ide@disrupsiteknologi.com</a>
+            </div>
+            <img class="my-image-img" src="/public/images/img3.png" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <div class="my-text">
+              <h6 class="flow-text">Copyright &copy; disrupsiteknologi.com</h6 class="flow-text">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
