Add mailto on home page button

--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
           <div class="my-image col s12 center-align">
             <div class="my-image-text">
               <h6 class="flow-text">Segera wujudkan dan kembangkan ide yang anda miliki bersama kami</h6 class="flow-text">
-              <a class="btn-small red lighten-3">Kirim ide ke ide@disrupsiteknologi.com</a>
+              <a class="btn-small red lighten-3" href="mailto:info@disrupsiteknologi.com">Kirim ide ke ide@disrupsiteknologi.com</a>
             </div>
             <img class="my-image-img" src="/public/images/img3.png" />
           </div>
