--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disrupsi Teknologi</title>
+    <link rel="icon" type="image/png" href="/public/images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/public/css/main.css?v=0.0.1">
   </head>
